<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.flashitdelivery.flash_it.fragment.MenuFragment">

    <!-- TODO: Update blank fragment layout -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        android:id="@+id/userInfoLoggedIn">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/userInfo"
            android:layout_marginTop="30dp"
            android:layout_centerHorizontal="true">

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/ic_user"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                app:civ_border_color="@color/flashIt_red"
                app:civ_border_width="2.5dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/loading"
                android:textSize="10pt"
                android:id="@+id/menuUsername"
                android:textColor="@color/flashIt_red"
                android:layout_gravity="center_horizontal"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_below="@+id/userInfo"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="25dp"
            android:id="@+id/userItemInfo">

            <belka.us.androidtoggleswitch.widgets.ToggleSwitch
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/toggleItemStatus"
                xmlns:custom="http://schemas.android.com/apk/res-auto"
                custom:textToggleLeft="@string/selling_text"
                custom:textToggleCenter="@string/ongoing_text"
                custom:textToggleRight="@string/sold_text"
                custom:activeBgColor="@color/flashIt_red"
                custom:toggleWidth="92dp">

            </belka.us.androidtoggleswitch.widgets.ToggleSwitch>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="205dp"
                android:layout_marginTop="15dp"
                android:id="@+id/deliveryListWrapper">

                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:visibility="visible"
                    android:id="@+id/sellingListWrapper">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:id="@+id/sellingList">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/noSellingTextMenu"
                            android:text="@string/no_selling_items"
                            android:layout_gravity="center_horizontal"/>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:visibility="gone"
                            android:orientation="vertical"
                            android:id="@+id/sellingMenuList"></LinearLayout>


                    </LinearLayout>
                </ScrollView>

                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:visibility="gone"
                    android:id="@+id/ongoingListWrapper">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:id="@+id/ongoingList">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/noOngoingTextMenu"
                            android:text="@string/no_ongoing_items"
                            android:layout_gravity="center_horizontal"/>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:visibility="gone"
                            android:orientation="vertical"
                            android:id="@+id/ongoingMenuList"></LinearLayout>



                    </LinearLayout>
                </ScrollView>

                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:visibility="gone"
                    android:id="@+id/soldListWrapper">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:id="@+id/soldList">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/noSoldTextMenu"
                            android:text="@string/no_sold_items"
                            android:layout_gravity="center_horizontal"/>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:visibility="gone"
                            android:orientation="vertical"
                            android:id="@+id/soldMenuList"></LinearLayout>
                    </LinearLayout>

                </ScrollView>

            </RelativeLayout>

        </LinearLayout>

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="2dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:id="@+id/userAppSettings"
            android:src="@drawable/grey_menu_2_filled_100"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/userNotLoggedIn"
        android:visibility="visible">

        <ImageView
            android:layout_width="280dp"
            android:layout_height="280dp"
            android:layout_centerHorizontal="true"
            android:id="@+id/loginFlashItLogo"
            android:src="@drawable/logo"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/loginFlashItLogo"
            android:layout_alignRight="@+id/loginFlashItLogo"
            android:textSize="10pt"
            android:gravity="center"
            android:id="@+id/accountReasoningText"
            android:text="@string/account_reasoning"
            android:layout_alignBottom="@+id/loginFlashItLogo"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:id="@+id/accountOptions"
            android:visibility="visible"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:layout_below="@+id/loginFlashItLogo">

            <TextView
                android:layout_width="260dp"
                android:layout_height="50dp"
                android:id="@+id/loginButton"
                android:gravity="center"
                android:textColor="@color/flashIt_red"
                android:text="@string/login_text"
                android:background="@drawable/rectangle_red_border_four_round_corners"/>

            <TextView
                android:layout_width="260dp"
                android:layout_height="50dp"
                android:layout_marginTop="25dp"
                android:id="@+id/registerButton"
                android:gravity="center"
                android:textColor="@color/flashIt_red"
                android:text="@string/register_text"
                android:background="@drawable/rectangle_red_border_four_round_corners"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="260dp"
            android:layout_centerHorizontal="true"
            android:layout_height="200dp"
            android:layout_marginTop="25dp"
            android:id="@+id/loginInput"
            android:orientation="vertical"
            android:visibility="gone"
            android:layout_below="@+id/loginFlashItLogo">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:orientation="vertical"
                android:gravity="center"
                android:background="@drawable/rectangle_grey_border_four_round_corners"
                android:id="@+id/loginInputInfo">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:id="@+id/loginUsername">

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_alignTop="@+id/loginEmailInput"
                        android:layout_alignBottom="@+id/loginEmailInput"
                        android:layout_marginLeft="10dp"
                        android:id="@+id/loginEmailIcon"
                        android:src="@drawable/email_login_icon"/>

                    <EditText
                        android:layout_width="220dp"
                        android:layout_height="wrap_content"
                        android:textSize="6pt"
                        android:maxLines="1"
                        android:hint="@string/email_address_text"
                        android:id="@+id/loginEmailInput"
                        android:inputType="textEmailAddress"
                        android:layout_toRightOf="@+id/loginEmailIcon"/>
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:id="@+id/loginPassword">

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_alignTop="@+id/loginPasswordInput"
                        android:layout_alignBottom="@+id/loginPasswordInput"
                        android:layout_marginLeft="10dp"
                        android:id="@+id/loginPasswordIcon"
                        android:src="@drawable/password_login_icon"/>

                    <EditText
                        android:layout_width="220dp"
                        android:layout_height="wrap_content"
                        android:textSize="6pt"
                        android:maxLines="1"
                        android:hint="@string/password_text"
                        android:id="@+id/loginPasswordInput"
                        android:inputType="textPassword"
                        android:layout_toRightOf="@+id/loginPasswordIcon"
                        android:layout_toEndOf="@+id/loginPasswordIcon"/>

                </RelativeLayout>
            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/loginOptionButtons">

                <TextView
                    android:layout_width="110dp"
                    android:layout_height="40dp"
                    android:layout_alignParentLeft="true"
                    android:id="@+id/cancelButtonContinue"
                    android:gravity="center"
                    android:layout_marginTop="25dp"
                    android:textColor="@color/flashIt_red"
                    android:text="@string/cancel_uppercase_text"
                    android:background="@drawable/rectangle_red_border_four_round_corners"/>

                <TextView
                    android:layout_width="110dp"
                    android:layout_height="40dp"
                    android:layout_alignParentRight="true"
                    android:id="@+id/loginButtonContinue"
                    android:gravity="center"
                    android:layout_marginTop="25dp"
                    android:textColor="@color/flashIt_red"
                    android:text="@string/login_text"
                    android:background="@drawable/rectangle_red_border_four_round_corners"/>

            </RelativeLayout>





        </LinearLayout>



    </RelativeLayout>



</FrameLayout>
